Sync all content

--- a/content/resources/17-267f13.md
+++ b/content/resources/17-267f13.md
@@ -5,11 +5,13 @@ description: A 2013 rally in front of the Supreme Court as justices were hearing
 file: /courses/17-267-democracy-in-america-fall-2013/5c1c6b9fd79db548457007ba9e4b2dd6_17-267f13.jpg
 file_size: 64124
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: A 2013 rally in front of the Supreme Court as justices were hearing cases
     on the Voting Rights Act. ("Protect the Voting Rights Rally at the SCOTUS." Photo
-    by {{% resource_link "9cbc46ff-c49c-46b7-8cb8-92424ff4f31b" "David Sachs / SEIU"
-    %}} on flickr. CC BY-NC-SA.)
+    by [David Sachs / SEIU](http://www.flickr.com/photos/85131712@N00/8512765859/in/photolist-dYf9Ha-dYf9xF-dYf9Cn-dYkQsh-4qmw7e-axTXED-4G9BDk-5zmrhg-5znB7T-8PM2oj-8PHZca-8PHYQ2-8PM3XL-8PM4vL-8PHZQe-8PHXNz-8PHZ4D-8PHZyD-8PM3Jm-8PHZj6-8PM2z9-8PM39o-8PMaEh-5ziB39-8PM58E-8PM3qU-8PHZXV-8rMzMk-4Q3tHh-9xn7L1-5zhZAq-b2T86Z-7h2q-4CY8-4qgDQ2-9LNzTV-dFdeuE-4mBrJ-7bWU-5zxqv1-883JuX-5zgyQ2-4qq4To-dXJBWS-dXJAB3-dXJBqy-8StTJL-883PBK-8871kh-87EuDo-5ysiwD)
+    on flickr. CC BY-NC-SA.)
   credit: Image courtesy of SEIU on flickr. CC BY-NC-SA.
   image-alt: A hand holds a poster with the words "Protect My Vote" in front of the
     U.S. Supreme Court building.
