--- a/content/resources/17-267f13.md
+++ b/content/resources/17-267f13.md
@@ -8,8 +8,8 @@ file_type: image/jpeg
 image_metadata:
   caption: A 2013 rally in front of the Supreme Court as justices were hearing cases
     on the Voting Rights Act. ("Protect the Voting Rights Rally at the SCOTUS." Photo
-    by [David Sachs / SEIU](http://www.flickr.com/photos/85131712@N00/8512765859/in/photolist-dYf9Ha-dYf9xF-dYf9Cn-dYkQsh-4qmw7e-axTXED-4G9BDk-5zmrhg-5znB7T-8PM2oj-8PHZca-8PHYQ2-8PM3XL-8PM4vL-8PHZQe-8PHXNz-8PHZ4D-8PHZyD-8PM3Jm-8PHZj6-8PM2z9-8PM39o-8PMaEh-5ziB39-8PM58E-8PM3qU-8PHZXV-8rMzMk-4Q3tHh-9xn7L1-5zhZAq-b2T86Z-7h2q-4CY8-4qgDQ2-9LNzTV-dFdeuE-4mBrJ-7bWU-5zxqv1-883JuX-5zgyQ2-4qq4To-dXJBWS-dXJAB3-dXJBqy-8StTJL-883PBK-8871kh-87EuDo-5ysiwD)
-    on flickr. CC BY-NC-SA.)
+    by {{% resource_link "dd10eea3-b1a1-4110-99ac-1608758c6341" "David Sachs / SEIU"
+    %}} on flickr. CC BY-NC-SA.)
   credit: Image courtesy of SEIU on flickr. CC BY-NC-SA.
   image-alt: A hand holds a poster with the words "Protect My Vote" in front of the
     U.S. Supreme Court building.
